syntax = "proto3";
package fx.erc20.v1;

import "cosmos/bank/v1beta1/bank.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "fx/erc20/v1/erc20.proto";
import "fx/erc20/v1/genesis.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/functionx/fx-core/x/erc20/types";

// Msg defines the erc20 Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // ConvertCoin mints a ERC20 representation of the SDK Coin denom that is
  // registered on the token mapping.
  rpc ConvertCoin(MsgConvertCoin) returns (MsgConvertCoinResponse);
  // ConvertERC20 mints a Cosmos coin representation of the ERC20 token contract
  // that is registered on the token mapping.
  rpc ConvertERC20(MsgConvertERC20) returns (MsgConvertERC20Response);
  // ConvertDenom convert denom to other denom
  rpc ConvertDenom(MsgConvertDenom) returns (MsgConvertDenomResponse);

  // UpdateParams defines a governance operation for updating the x/erc20 module
  // parameters. The authority is hard-coded to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc RegisterCoin(MsgRegisterCoin) returns (MsgRegisterCoinResponse);

  rpc RegisterERC20(MsgRegisterERC20) returns (MsgRegisterERC20Response);

  rpc ToggleTokenConversion(MsgToggleTokenConversion)
      returns (MsgToggleTokenConversionResponse);

  rpc UpdateDenomAlias(MsgUpdateDenomAlias)
      returns (MsgUpdateDenomAliasResponse);
}

// MsgConvertCoin defines a Msg to convert a Cosmos Coin to a ERC20 token
message MsgConvertCoin {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "erc20/MsgConvertCoin";

  // Cosmos coin which denomination is registered on erc20 bridge.
  // The coin amount defines the total ERC20 tokens to convert.
  cosmos.base.v1beta1.Coin coin = 1 [ (gogoproto.nullable) = false ];
  // recipient hex address to receive ERC20 token
  string receiver = 2;
  // cosmos bech32 address from the owner of the given ERC20 tokens
  string sender = 3;
}

// MsgConvertCoinResponse returns no fields
message MsgConvertCoinResponse {}

// MsgConvertERC20 defines a Msg to convert an ERC20 token to a Cosmos SDK coin.
message MsgConvertERC20 {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "erc20/MsgConvertERC20";

  // ERC20 token contract address registered on erc20 bridge
  string contract_address = 1;
  // amount of ERC20 tokens to mint
  string amount = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  // bech32 address to receive SDK coins.
  string receiver = 3;
  // sender hex address from the owner of the given ERC20 tokens
  string sender = 4;
}

// MsgConvertERC20Response returns no fields
message MsgConvertERC20Response {}

// MsgConvertDenom defines a Msg to convert an denom to other denom
message MsgConvertDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "erc20/MsgConvertDenom";

  // msg sender
  string sender = 1;
  // receiver address
  string receiver = 2;
  // coin to convert
  cosmos.base.v1beta1.Coin coin = 3 [ (gogoproto.nullable) = false ];
  // target denom
  string target = 4;
}

// MsgConvertDenomResponse returns no fields
message MsgConvertDenomResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "erc20/MsgUpdateParams";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // params defines the x/erc20 parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [ (gogoproto.nullable) = false ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgRegisterCoin {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "erc20/MsgRegisterCoin";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // token pair of Cosmos native denom and ERC20 token address
  cosmos.bank.v1beta1.Metadata metadata = 2 [ (gogoproto.nullable) = false ];
}

message MsgRegisterCoinResponse {
  TokenPair pair = 1 [ (gogoproto.nullable) = false ];
}

message MsgRegisterERC20 {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "erc20/MsgRegisterERC20";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // contract address of ERC20 token
  string erc20address = 2;
  // aliases is a list of string aliases for the given denom
  repeated string aliases = 3;
}

message MsgRegisterERC20Response {
  TokenPair pair = 1 [ (gogoproto.nullable) = false ];
}

message MsgToggleTokenConversion {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "erc20/MsgToggleTokenConversion";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // token identifier can be either the hex contract address of the ERC20 or the
  // Cosmos base denomination
  string token = 2;
}

message MsgToggleTokenConversionResponse {
  TokenPair pair = 1 [ (gogoproto.nullable) = false ];
}

message MsgUpdateDenomAlias {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "erc20/MsgUpdateDenomAlias";

  // authority is the address of the governance account.
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // denom
  string denom = 2;
  // alias update
  string alias = 3;
}

message MsgUpdateDenomAliasResponse {}
