syntax = "proto3";
package fx.gravity.v1;

import "cosmos/base/v1beta1/coin.proto";
import "fx/gravity/v1/types.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/functionx/fx-core/x/gravity/types";

// Deprecated: after upgrade v3
service Msg {
  // Deprecated: Please use crosschain Msg.OracleSetConfirm
  rpc ValsetConfirm(MsgValsetConfirm) returns (MsgValsetConfirmResponse);
  // Deprecated: Please use crosschain Msg.SendToExternal
  rpc SendToEth(MsgSendToEth) returns (MsgSendToEthResponse);
  // Deprecated: Please use crosschain Msg.RequestBatch
  rpc RequestBatch(MsgRequestBatch) returns (MsgRequestBatchResponse);
  // Deprecated: Please use crosschain Msg.ConfirmBatch
  rpc ConfirmBatch(MsgConfirmBatch) returns (MsgConfirmBatchResponse);
  // Deprecated: Please use crosschain Msg.SendToFxClaim
  rpc DepositClaim(MsgDepositClaim) returns (MsgDepositClaimResponse);
  // Deprecated: Please use crosschain Msg.SendToExternalClaim
  rpc WithdrawClaim(MsgWithdrawClaim) returns (MsgWithdrawClaimResponse);
  // Deprecated: Please use crosschain Msg.CancelSendToExternal
  rpc CancelSendToEth(MsgCancelSendToEth) returns (MsgCancelSendToEthResponse);
  // Deprecated: Please use crosschain Msg.OracleSetUpdateClaim
  rpc ValsetUpdateClaim(MsgValsetUpdatedClaim) returns (MsgValsetUpdatedClaimResponse);
}

// Deprecated: after upgrade v3
message MsgValsetConfirm {
  uint64 nonce = 1;
  string orchestrator = 2;
  string eth_address = 3;
  string signature = 4;
}

// Deprecated: after upgrade v3
message MsgValsetConfirmResponse {}

// Deprecated: after upgrade v3
message MsgSendToEth {
  string sender = 1;
  string eth_dest = 2;
  cosmos.base.v1beta1.Coin amount = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin bridge_fee = 4 [(gogoproto.nullable) = false];
}

// Deprecated: after upgrade v3
message MsgSendToEthResponse {}

// Deprecated: after upgrade v3
message MsgRequestBatch {
  string sender = 1;
  string denom = 2;
  string minimum_fee = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string feeReceive = 4;
  string base_fee = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// Deprecated: after upgrade v3
message MsgRequestBatchResponse {}

// Deprecated: after upgrade v3
message MsgConfirmBatch {
  uint64 nonce = 1;
  string token_contract = 2;
  string eth_signer = 3;
  string orchestrator = 4;
  string signature = 5;
}

// Deprecated: after upgrade v3
message MsgConfirmBatchResponse {}

// Deprecated: after upgrade v3
message MsgDepositClaim {
  uint64 event_nonce = 1;
  uint64 block_height = 2;
  string token_contract = 3;
  string amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string eth_sender = 5;
  string fx_receiver = 6;
  string target_ibc = 7;
  string orchestrator = 8;
}

// Deprecated: after upgrade v3
message MsgDepositClaimResponse {}

// Deprecated: after upgrade v3
message MsgWithdrawClaim {
  uint64 event_nonce = 1;
  uint64 block_height = 2;
  uint64 batch_nonce = 3;
  string token_contract = 4;
  string orchestrator = 5;
}

// Deprecated: after upgrade v3
message MsgWithdrawClaimResponse {}

// Deprecated: after upgrade v3
message MsgCancelSendToEth {
  uint64 transaction_id = 1;
  string sender = 2;
}

// Deprecated: after upgrade v3
message MsgCancelSendToEthResponse {}

// Deprecated: after upgrade v3
message MsgValsetUpdatedClaim {
  uint64 event_nonce = 1;
  uint64 block_height = 2;
  uint64 valset_nonce = 3;
  repeated BridgeValidator members = 4;
  string orchestrator = 6;
}

// Deprecated: after upgrade v3
message MsgValsetUpdatedClaimResponse {}

// Deprecated: after upgrade v3
message MsgSetOrchestratorAddress {
  string validator = 1;
  string orchestrator = 2;
  string eth_address = 3;
}

// Deprecated: after upgrade v3
message MsgSetOrchestratorAddressResponse {}

// Deprecated: after upgrade v3
message MsgFxOriginatedTokenClaim {
  uint64 event_nonce = 1;
  uint64 block_height = 2;
  string token_contract = 3;
  string name = 4;
  string symbol = 5;
  uint64 decimals = 6;
  string orchestrator = 7;
}

// Deprecated: after upgrade v3
message MsgFxOriginatedTokenClaimResponse {}
